--- a/app/src/main/res/layout/item_door.xml
+++ b/app/src/main/res/layout/item_door.xml
@@ -6,10 +6,11 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
     android:id="@+id/item_door"
-    android:layout_marginTop="16dp"
+    android:layout_margin="6dp"
     app:cardCornerRadius="12dp">
 
     <LinearLayout
+
         android:id="@+id/ll_item_door"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -57,6 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:cardCornerRadius="22sp"
+            android:layout_marginBottom="12dp"
             tools:ignore="MissingConstraints">
 
             <LinearLayout
@@ -69,7 +71,7 @@
                 <ImageView
                     android:background="@color/black"
                     android:id="@+id/door_iv"
-                    android:layout_width="360dp"
+                    android:layout_width="390dp"
                     android:layout_height="180dp"
                     android:scaleType="centerCrop"
                     android:src="@color/black" />
